<resources>
    <string name="app_name">Travelah App</string>
    <string name="package_name">com.travelah.travelahapp</string>
    <string name="travelah">Travelah</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="hello_welcome">Hello! Welcome to <font color='#07AFFF'><b>Travelah</b></font>. Please login to start a new journey with us!</string>
    <string name="register_welcome">Don’t have an account? Please register to start a new journey with us!</string>
    <string name="travelah_icon">Travelah Icon</string>
    <string name="invalid_input">Pastikan semua field sudah terisi</string>
    <string name="next">Continue</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="login_failed_message">Anda gagal login.</string>
    <string name="login_successful_message">Anda berhasil login.</string>
    <string name="register_failed_message">Anda gagal mendaftar.</string>
    <string name="register_successful_message">Anda berhasil mendaftar.</string>
    <string name="logout">Logout</string>
    <string name="fullname_hint">Full name</string>
    <string name="profile_picture_link">https://avatars.githubusercontent.com/u/74417769?v=4</string>
    <string name="profile_image_content_desc">Profile Image</string>
    <string name="tips">tips</string>
    <string name="like_count">Like Count</string>
    <string name="dislike_count">Dislike Count</string>
    <string name="comment_count">Comment Count</string>
    <string name="new_chat">New Chat</string>
    <string name="tips_chat">Don’t know what to say? you can ask FAQ or ask recommendation some places to Vela like “recommend me the best place in Bali!” or say anything like that.</string>
    <string name="help_today_question">What can I help you today?</string>
    <string name="good_to_see_you_again">Good to see you again</string>
    <string name="hi">Hi</string>
    <string name="history">History</string>
    <string name="most_liked_post">Most Liked Post</string>
    <string name="group_chat_history"><u>Chat With Vela</u></string>
    <string name="group_chat_header_sample">Today</string>
    <string name="latest_chat_sample">Latest chat...</string>
    <string name="no_history_data">No history data available</string>
    <string name="no_most_liked_post_data">No most liked post data available</string>
    <string name="failed_error">There\'s an error, please try again later</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chat</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">All Post</string>
    <string name="tab_text_2">My Post</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor felis vitae nunc dignissim, at eleifend nisl fermentum. Mauris luctus placerat tellus, id tristique elit pulvinar in. Vestibulum vel dui at nulla venenatis ullamcorper. Integer ac suscipit enim.</string>
    <string name="preview_desc">Preview for the picture that will be uploaded</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="change_post_cover">Change post cover using:</string>
    <string name="post_title">Post title</string>
    <string name="description_hint">What do you want to share?</string>
    <string name="location">Location</string>
    <string name="no_location">No Location</string>
    <string name="change"><u>Change</u></string>
    <string name="not_put_the_picture">Please insert picture first.</string>
    <string name="not_put_the_description">Please insert description first.</string>
    <string name="upload_success">Post uploaded successfully</string>
    <string name="add_edit">Add/Edit</string>
    <string name="add_post">Add Post</string>
    <string name="comment_text_field_placeholder">Write your comments here</string>
    <string name="form_name">Name :</string>
    <string name="form_age">Age :</string>
    <string name="form_occupation">Occupation :</string>
    <string name="form_location">Location :</string>
    <string name="about_me_hint">About Me...</string>
    <string name="save_changes">Save Changes</string>
    <string name="failed_send_chat">Chat failed to send</string>
    <string name="message_copied">Message copied to clipboard</string>
    <string name="chatbot_profile_desc">Chatbot profile image</string>
    <string name="post_detail">Post Detail</string>
    <string name="delete_post">Delete Post</string>
    <string name="cancel">Cancel</string>
    <string name="delete_post_confirmation">Are you sure want to delete this post?</string>
    <string name="ok">OK</string>
    <string name="edit_post">Edit Post</string>
    <string name="no_post_data_available">No post data available</string>
    <string name="choose_location_first">You should choose location first</string>
</resources>