<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.editprofile.EditProfileActivity">

</androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageProfilePreview"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:src="@drawable/ic_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCamera"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:background="@drawable/button_background"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="@id/imageProfilePreview"
            app:layout_constraintTop_toBottomOf="@id/imageProfilePreview" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGallery"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:background="@drawable/button_background"
            android:text="@string/galery"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="@id/imageProfilePreview"
            app:layout_constraintTop_toBottomOf="@id/imageProfilePreview" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etName"
            app:layout_constraintBottom_toBottomOf="@id/etName"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonCamera"/>

        <TextView
            android:id="@+id/textAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_age"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etAge"
            app:layout_constraintBottom_toBottomOf="@id/etAge"/>

        <EditText
            android:id="@+id/etAge"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"/>

        <TextView
            android:id="@+id/textOccupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_occupation"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etOccupation"
            app:layout_constraintBottom_toBottomOf="@id/etOccupation"/>

        <EditText
            android:id="@+id/etOccupation"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAge"/>

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_location"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etLocation"
            app:layout_constraintBottom_toBottomOf="@id/etLocation"/>

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etOccupation"/>

        <EditText
            android:id="@+id/etAboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/about_me_hint"
            android:textAlignment="center"
            android:background="@drawable/about_me_background"
            android:paddingVertical="24dp"
            android:paddingHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLocation"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSaveChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/save_changes"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_margin="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAboutMe"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
